# IndustrialXPL-Forge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  HANDOFF.md  LICENSE  MANIFEST.in  README.md  README.pt-BR.md  SECURITY.md  TERMS_OF_USE.md  ixf.py  pyproject.toml  requirements.txt
.githooks/: commit-msg
.github/workflows/: ci.yml  publish-pypi.yml
contrib/native-payloads/: USAGE.md
contrib/native-payloads/modbus/: manifest.py  payload.c
contrib/native-payloads/s7comm/: manifest.py
contrib/native-payloads/triton/: manifest.py  payload.py
docs/: ARCHITECTURE.md  INCORPORATION_PLAYBOOK.md  _config.yml  index.md
docs/_layouts/: default.html
docs/en-us/: 00-faq.md  01-installation.md  02-quick-start.md  03-shell-reference.md  04-module-system.md  05-safemode-destructivemode.md  06-mitre-attack-ics.md  07-sast-llm.md  08-protocols-vendors.md  09-module-development.md  10-cli-noninteractive.md  11-poly-exploit-runner.md  12-assessment-compliance.md  13-module-catalog.md  14-nse-scripts.md  15-troubleshooting.md  _index.md
docs/pt-br/: 01-instalacao.md  02-inicio-rapido.md  03-referencia-shell.md  04-sistema-modulos.md  05-safemode-destructivemode.md  06-mitre-attack-ics.md  07-sast-llm.md  08-protocolos-vendors.md  09-desenvolvimento-modulos.md  10-cli-nao-interativo.md  11-poly-exploit-runner.md  12-assessment-conformidade.md  13-catalogo-modulos.md  14-scripts-nse.md  _index.md
industrialxpl/: __main__.py  interpreter.py
industrialxpl/api/: __init__.py  server.py
industrialxpl/clients/: s7_client.py
industrialxpl/core/: http.py  platform.py  session.py
industrialxpl/core/exploit/: __init__.py  encoders.py  exceptions.py  exploit.py  module_target_scope.py  option.py  payloads.py  printer.py  safety.py  shell.py  shell_stager.py  utils.py
industrialxpl/core/http/: http_client.py
industrialxpl/core/ics/: __init__.py  bacnet_offensive.py  cip_client.py  fuzz_engine.py  iec104_stack.py  isf_port.py  modbus_client.py  modbus_toolkit.py  open_plc_utils.py  ot_audit.py  ricnar_pocs.py  s7_client.py  s7_llc.py  s7_packets.py  s7plus_client.py  wdb2_client.py
industrialxpl/core/ics_tools/: __init__.py  catalog.py  forensics_engine.py  native_handlers.py  orchestrator.py  runner.py
industrialxpl/core/lab/: docker_stack.py  s2opc_lab.py
industrialxpl/core/malware/: __init__.py  aim2_helpers.py  aim3_helpers.py  bashlite_patch.py  botnet_network.py  build_profile.py  c2_daemon.py  c2_patch.py  c2_persistence.py  c2_server.py  catalog.py  compiler.py  crc.py  crosscompile.py  db_init.py  elf_inspector.py  family_capabilities.py  family_ttp.py  frostygoop_json.py  go_cnc_manager.py  http_payload_daemon.py  http_payload_manager.py  incontroller_protocols.py  lab_ops.py  maliot_lookup.py  mozi_dht.py  native_actions.py  obfuscator.py  orchestrator.py  propagator.py  source_parser.py  tristation.py
industrialxpl/core/mitre/: index.py  reporter.py  sweeper.py  tactics.py
industrialxpl/core/modbus/: __init__.py  address.py  base.py  timing.py  transport.py
industrialxpl/core/native/: __init__.py  loader.py
industrialxpl/core/network/: __init__.py  transport.py
industrialxpl/core/nse/: nse_manager.py
industrialxpl/core/poly/: poly_runner.py
industrialxpl/core/reporting/: reporter.py
industrialxpl/core/sast/: llm_provider.py  plc_parsers.py  prompts.py
industrialxpl/core/search/: __init__.py  engine.py
industrialxpl/core/shells/: __init__.py  dns_tunnel_shell.py  http_poll_shell.py  icmp_covert_shell.py  internal_shell.py  meterpreter_bridge.py  mqtt_shell.py  raw_tcp_shell.py  raw_udp_shell.py
industrialxpl/lab_overlays/lisa/: docker-compose.override.yml  requirements.ixf.txt
industrialxpl/lab_overlays/openplc/: README.md  docker-compose.override.yml
industrialxpl/modules/assessment/: lab_environment_setup.py
industrialxpl/modules/cve/: cve_2019_13946_s7_300_profinet_dos.py  cve_2021_22681_s7_1200_hardcoded_key.py  cve_2023_27396_omron_cj2m_fins.py
industrialxpl/protocols/: cotp.py  enip.py  modbus_tcp.py  profinet_dcp.py  s7comm.py
industrialxpl/resources/corpus/: torii_hajime.json
industrialxpl/resources/cve/: cisa_ics_2025_ingest.json  ics_cve_database.json
industrialxpl/resources/detection/: icsforge_scenarios.json
industrialxpl/resources/fixtures/: frostygoop_task-text.json
industrialxpl/resources/ioc/: awesome-ics-malware-hashes.json
industrialxpl/resources/nse_scripts/: ics-default-creds.nse  ics-dnp3-enum.nse  ics-enumerate.nse  ics-firmware-version.nse  ics-historian-discover.nse  ics-honeypot-detect.nse  ics-iec104-info.nse  ics-malware-ioc.nse  ics-modbus-coils.nse  ics-opcua-nodes.nse  ics-plc-program-access.nse  ics-safety-systems.nse  ics-scada-fingerprint.nse  ics-sweep.nse  ics-triton-check.nse
industrialxpl/resources/osint/: shodan_ics_dorks.json  shodan_malware_dorks.json
industrialxpl/resources/sast_examples/: GRFICSv3_655326.st  GRFICSv3_690525.st  GRFICSv3_blank.st  GRFICSv3_chemical.st  compressor.il  gas_pipeline_pressure_control.st  nuclear_reactor_cooling.st  (+8 more)
resources/rc/: README.md  iec62443_audit.rc  mitre_ics_sweep.rc  modbus_scan.rc  ot_discovery.rc
scripts/: generate_malware_family_modules.py  publish.ps1  publish.sh  sync_from_embedxpl.py
tools/: batch_complete_coverage.py  batch_coverage_final.py  batch_cve_wave3.py  batch_cve_wave4.py  batch_final_gaps.py  batch_global_vendors_wave2.py  batch_global_vendors_wave3.py  batch_global_vendors_wave4.py  batch_modules.py  batch_nocve_wave2.py  batch_proto_final.py  batch_vendors_global.py  deep_study_external.py  env_doctor.py  extra_cve_batch.py  generate_cve_stubs.py  generate_exploitdb_modules.py  generate_malware_modules.py  incorporation_gates.json  ingest_awesome_ics_malware.py  ingest_cisa_ics_advisories.py  install-mirai-toolchains.sh  mass_generate_cves.py  nse_install.py  nvd_ics_crawler.py  restore_incorporated_vendor.sh  score_incorporation.py  sync_doc_stats.py  test_e2e_lab.py  verify_family_matrix.py  verify_github_issues.py  verify_incorporation_gate.py  xpl_cli.py
(+1400 files in other folders)
